# ethanzeigler_com

./: .sourcery.yaml  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  uwsgi.ini
ethanzeigler_com/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
portfolio/: admin.py  models.py
static/clean/: package.json  vite.config.ts
static/clean/src/store/: auth.ts
static/clean/src/views/: Home.vue
static/vuetify-project/: .gitignore  .pnp.cjs  package.json  vite.config.js
static/vuetify-project-ts/: .env.example  .eslintrc.js  .gitignore  Dockerfile  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
static/vuetify-project-ts/src/: docs.drawio  main.ts
static/vuetify-project-ts/src/components/: Login.vue
static/vuetify-project-ts/src/components/common/: AccountNav.vue  ComingSoonHoverover.vue  UnderConstruction.vue
static/vuetify-project-ts/src/components/portfolio/: Masthead.vue
static/vuetify-project-ts/src/layouts/default/: AppBar.vue  Footer.vue
static/vuetify-project-ts/src/plugins/: index.ts  vuetify.ts
static/vuetify-project-ts/src/router/: index.ts
static/vuetify-project-ts/src/store/: app.ts  auth.ts
static/vuetify-project-ts/src/views/: Home.vue  Login.vue
static/vuetify-project/src/: main.js
static/vuetify-project/src/components/: Login.vue
static/vuetify-project/src/store/: auth.js
static/vuetify-project/src/views/: Home.vue
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
