[tool.poetry]
name = "ethanzeigler-com"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ethanzeigler_com"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
django-vite = "^2.0.2"
graphene-django = "^3.0.1"
django-allauth = "^0.54.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
django-extensions = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
